--- a/地图.html
+++ b/地图.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="height:100%;">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <!-- 引入 ECharts 文件 -->
+    <script src="js/echarts.min.js"></script>
+    <script src="js/china.js"></script> 
 </head>
-<body >
-    <iframe src="https://lzxue.github.io/yiqingditu/" frameborder="0" width="1000px" height="800px"></iframe>
+<body style="height:100%;">
+    <div id="main" style="width:100%;height:100%;"></div>
 </body>
 </html>
+<script>
+    function randomData() {
+		return Math.round(Math.random()*500);
+	}
+ 
+	var mydata = [
+		{name: '北京',value: randomData() },{name: '天津',value: randomData() },
+		{name: '上海',value: randomData() },{name: '重庆',value: randomData() },
+		{name: '河北',value: randomData() },{name: '河南',value: randomData() },
+		{name: '云南',value: randomData() },{name: '辽宁',value: randomData() },
+		{name: '黑龙江',value: randomData() },{name: '湖南',value: randomData() },
+		{name: '安徽',value: randomData() },{name: '山东',value: randomData() },
+		{name: '新疆',value: randomData() },{name: '江苏',value: randomData() },
+		{name: '浙江',value: randomData() },{name: '江西',value: randomData() },
+		{name: '湖北',value: randomData() },{name: '广西',value: randomData() },
+		{name: '甘肃',value: randomData() },{name: '山西',value: randomData() },
+		{name: '内蒙古',value: randomData() },{name: '陕西',value: randomData() },
+		{name: '吉林',value: randomData() },{name: '福建',value: randomData() },
+		{name: '贵州',value: randomData() },{name: '广东',value: randomData() },
+		{name: '青海',value: randomData() },{name: '西藏',value: randomData() },
+		{name: '四川',value: randomData() },{name: '宁夏',value: randomData() },
+		{name: '海南',value: randomData() },{name: '台湾',value: randomData() },
+		{name: '香港',value: randomData() },{name: '澳门',value: randomData() }
+	];
+    var chart = echarts.init(document.getElementById('main'));
+
+    var option = {
+		backgroundColor: '#FFFFFF',
+		title: {
+			text: '中国疫情地图',
+			//subtext: '纯属虚构',
+			x:'center'
+		},
+		tooltip : {
+			trigger: 'item'
+		},
+		visualMap: {
+			show : false,
+			x: 'left',
+			y: 'bottom',
+			splitList: [ 
+				{start: 500, end:600},{start: 400, end: 500},
+				{start: 300, end: 400},{start: 200, end: 300},
+				{start: 100, end: 200},{start: 0, end: 100},
+			],
+			color: ['#66CC33', '#00FF00', '#66FF33','#339900', '#33CC00', '#00CC00']
+		},
+		series: [{
+			name: '随机数据',
+			type: 'map',
+			mapType: 'china', 
+			roam: true,
+			label: {
+				normal: {
+					show: false
+				},
+				emphasis: {
+					show: false
+				}
+			},
+			data:mydata
+		}]
+	};
+
+    chart.setOption(option);
+</script>
